# cronet.dart

./: .gitignore  .pubignore  AUTHORS  CHANGELOG.md  README.md  analysis_options.yaml  dart_io_comparison.md  pubspec.yaml
.github/workflows/: test-package.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
benchmark/: benchmarking.md  latency.dart  run_all.dart  throughput.dart
benchmark/test_servers/caddy/: Caddyfile
benchmark/test_servers/flask/: app.py
benchmarks/: benchmarking.md  latency.dart  run_all.dart  throughput.dart
benchmarks/test_servers/caddy/www/: index.html
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/cli/: pubspec.yaml
example/flutter/: README.md  analysis_options.yaml  pubspec.yaml
example/flutter/android/app/: build.gradle
example/flutter/ios/: Podfile
example/flutter/ios/Runner/: Info.plist
example/flutter/ios/Runner.xcodeproj/: project.pbxproj
example/flutter/lib/: main.dart
example/flutter/linux/: CMakeLists.txt  my_application.cc
example/flutter/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/flutter/macos/Flutter/: GeneratedPluginRegistrant.swift
example/flutter/macos/Runner.xcodeproj/: project.pbxproj
example/flutter/test/: widget_test.dart
example/flutter/windows/: CMakeLists.txt
example/flutter/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/flutter/windows/runner/: Runner.rc  main.cpp
example/lib/: main.dart
example_dart/: pubspec.yaml
ios/: cronet.podspec
ios/Classes/: CronetPlugin.h  CronetPlugin.mm
lib/: cronet.dart
lib/src/: constants.dart  dylib_handler.dart  enums.dart  exceptions.dart  find_resource.dart  generated_bindings.dart  globals.dart  http_callback_handler.dart  http_client.dart  http_client_request.dart  http_client_response.dart  http_headers.dart  my_sum.dart  prepare_cronet.dart  quic_hint.dart
lib/src/native/wrapper/: BUILD.md  CMakeLists.txt  build.sh  sample_executor.cc  sample_executor.h  wrapper.cc  (+2 more)
lib/src/wrapper/: ffigen.yaml  generated_bindings.dart
linux/: CMakeLists.txt  cronet_plugin.cc
linux/include/cronet/: cronet_plugin.h
macos/: cronet.podspec
macos/Classes/: CronetPlugin.swift
src/: .gitignore  BUILD.md  CMakeLists.txt  build.sh  upload_data_provider.cc  upload_data_provider.h  wrapper.cc  wrapper.h  wrapper_export.h  wrapper_utils.cc  wrapper_utils.h
test/: cronet_test.dart  http_client_close_test.dart  http_client_request_upload_test.dart  http_headers_test.dart  http_request_exceptions_test.dart  http_responses_exceptions_test.dart  http_responses_new_api_test.dart  http_responses_test.dart  my_test.dart  test_utils.dart
tool/: build_wrapper.dart  update_bindings.dart  update_tars.dart
windows/: CMakeLists.txt  cronet_plugin.cpp
windows/include/cronet/: cronet_plugin.h
(+10 files in other folders)
